// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeIntervalPicker constructor() else 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2017-01-01T03:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2017-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker constructor() if \`isActive\` 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2016-01-01T03:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2016-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker constructor() if \`isSelected\` 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2015-01-01T03:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2015-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at available with \`onChange() callback\` 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2115-01-01T03:00:00.000Z,
  },
  Object {
    "status": "selected",
    "value": 2115-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2115-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at available without \`onChange()\` callback 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2001-01-01T03:00:00.000Z,
  },
  Object {
    "status": "selected",
    "value": 2001-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2001-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at disabled with \`onChange() callback\` 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2005-01-01T03:00:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2005-01-01T03:30:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2005-01-01T04:00:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2005-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T05:00:00.000Z,
  },
  Object {
    "status": "selected",
    "value": 2005-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2005-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at disabled without \`onChange()\` callback 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2006-01-01T03:00:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2006-01-01T03:30:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2006-01-01T04:00:00.000Z,
  },
  Object {
    "status": "disabled",
    "value": 2006-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2006-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at selected with \`onChange() callback\` 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2002-01-01T03:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2002-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClick() at selected without \`onChange()\` callback 1`] = `
Array [
  Object {
    "status": "available",
    "value": 2003-01-01T03:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T03:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T04:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T04:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T05:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T05:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T06:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T06:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T07:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T07:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T08:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T08:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T09:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T09:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T10:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T10:30:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T11:00:00.000Z,
  },
  Object {
    "status": "available",
    "value": 2003-01-01T11:30:00.000Z,
  },
]
`;

exports[`TimeIntervalPicker onStampClickNew() at disabled 1`] = `
Object {
  "selectedTime": Array [
    2115-01-01T03:30:00.000Z,
    2115-01-01T04:00:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2115-01-01T03:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2115-01-01T03:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2115-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2115-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() with \`onChange\` callback \`eventDuration\` undefined 1`] = `
Object {
  "selectedTime": Array [
    2123-01-01T07:00:00.000Z,
    2123-01-01T07:30:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2123-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T06:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2123-01-01T07:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2123-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2123-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2123-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() with \`onChange\` callback eventDuration < timeStep 1`] = `
Object {
  "selectedTime": Array [
    2122-01-01T06:00:00.000Z,
    2122-01-01T06:29:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2122-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T05:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2122-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T11:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2122-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() with \`onChange\` callback eventDuration === timeStep 1`] = `
Object {
  "selectedTime": Array [
    2120-01-01T03:30:00.000Z,
    2120-01-01T04:00:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2120-01-01T03:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2120-01-01T03:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2120-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2120-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2120-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() with \`onChange\` callback eventDuration > timeStep 1`] = `
Object {
  "selectedTime": Array [
    2121-01-01T04:30:00.000Z,
    2121-01-01T05:29:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2121-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T04:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2121-01-01T04:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2121-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2121-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2121-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() without \`onChange\` callback \`eventDuration\` undefined 1`] = `
Object {
  "selectedTime": Array [
    2119-01-01T07:00:00.000Z,
    2119-01-01T07:30:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2119-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T06:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2119-01-01T07:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2119-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2119-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2119-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() without \`onChange\` callback eventDuration === timeStep 1`] = `
Object {
  "selectedTime": Array [
    2115-01-01T03:30:00.000Z,
    2115-01-01T04:00:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2115-01-01T03:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2115-01-01T03:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2115-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2115-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2115-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() without \`onChange\` callback eventDuration is bigger than timeStep 1`] = `
Object {
  "selectedTime": Array [
    2116-01-01T04:30:00.000Z,
    2116-01-01T05:29:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2116-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T04:00:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2116-01-01T04:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2116-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T05:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2116-01-01T11:00:00.000Z,
    },
    Object {
      "status": "reserved",
      "value": 2116-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker onStampClickNew() without \`onChange\` callback eventDuration is smaller than timeStep 1`] = `
Object {
  "selectedTime": Array [
    2117-01-01T06:00:00.000Z,
    2117-01-01T06:29:00.000Z,
  ],
  "stamps": Array [
    Object {
      "status": "available",
      "value": 2117-01-01T03:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T03:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T04:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T04:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T05:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T05:30:00.000Z,
    },
    Object {
      "status": "selected",
      "value": 2117-01-01T06:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T06:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T07:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T07:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T08:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T08:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T09:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T09:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T10:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T10:30:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T11:00:00.000Z,
    },
    Object {
      "status": "available",
      "value": 2117-01-01T11:30:00.000Z,
    },
  ],
}
`;

exports[`TimeIntervalPicker render basic 1`] = `
<div
  className="wrapper"
>
  <h3
    className="picker-header"
  >
    React timespan picker
  </h3>
  <div
    className="picker"
  >
    <Timestamp
      handleClick={[Function]}
      key="0"
      status="available"
      value={2018-01-01T03:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="1"
      status="available"
      value={2018-01-01T03:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="2"
      status="available"
      value={2018-01-01T04:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="3"
      status="available"
      value={2018-01-01T04:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="4"
      status="available"
      value={2018-01-01T05:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="5"
      status="available"
      value={2018-01-01T05:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="6"
      status="available"
      value={2018-01-01T06:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="7"
      status="available"
      value={2018-01-01T06:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="8"
      status="available"
      value={2018-01-01T07:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="9"
      status="available"
      value={2018-01-01T07:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="10"
      status="available"
      value={2018-01-01T08:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="11"
      status="available"
      value={2018-01-01T08:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="12"
      status="available"
      value={2018-01-01T09:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="13"
      status="available"
      value={2018-01-01T09:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="14"
      status="available"
      value={2018-01-01T10:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="15"
      status="available"
      value={2018-01-01T10:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="16"
      status="available"
      value={2018-01-01T11:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="17"
      status="available"
      value={2018-01-01T11:30:00.000Z}
    />
  </div>
</div>
`;

exports[`TimeIntervalPicker render has \`busyTime\` 1`] = `
<div
  className="wrapper"
>
  <h3
    className="picker-header"
  >
    React timespan picker
  </h3>
  <div
    className="picker"
  >
    <Timestamp
      handleClick={[Function]}
      key="0"
      status="available"
      value={2028-01-01T03:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="1"
      status="available"
      value={2028-01-01T03:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="2"
      status="available"
      value={2028-01-01T04:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="3"
      status="available"
      value={2028-01-01T04:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="4"
      status="available"
      value={2028-01-01T05:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="5"
      status="available"
      value={2028-01-01T05:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="6"
      status="available"
      value={2028-01-01T06:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="7"
      status="available"
      value={2028-01-01T06:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="8"
      status="available"
      value={2028-01-01T07:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="9"
      status="available"
      value={2028-01-01T07:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="10"
      status="available"
      value={2028-01-01T08:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="11"
      status="available"
      value={2028-01-01T08:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="12"
      status="available"
      value={2028-01-01T09:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="13"
      status="available"
      value={2028-01-01T09:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="14"
      status="available"
      value={2028-01-01T10:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="15"
      status="available"
      value={2028-01-01T10:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="16"
      status="available"
      value={2028-01-01T11:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="17"
      status="available"
      value={2028-01-01T11:30:00.000Z}
    />
  </div>
</div>
`;

exports[`TimeIntervalPicker render has \`selectedTime\` 1`] = `
<div
  className="wrapper"
>
  <h3
    className="picker-header"
  >
    React timespan picker
  </h3>
  <div
    className="picker"
  >
    <Timestamp
      handleClick={[Function]}
      key="0"
      status="available"
      value={2011-01-01T03:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="1"
      status="available"
      value={2011-01-01T03:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="2"
      status="available"
      value={2011-01-01T04:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="3"
      status="available"
      value={2011-01-01T04:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="4"
      status="available"
      value={2011-01-01T05:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="5"
      status="available"
      value={2011-01-01T05:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="6"
      status="available"
      value={2011-01-01T06:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="7"
      status="available"
      value={2011-01-01T06:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="8"
      status="available"
      value={2011-01-01T07:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="9"
      status="available"
      value={2011-01-01T07:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="10"
      status="available"
      value={2011-01-01T08:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="11"
      status="available"
      value={2011-01-01T08:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="12"
      status="available"
      value={2011-01-01T09:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="13"
      status="available"
      value={2011-01-01T09:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="14"
      status="available"
      value={2011-01-01T10:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="15"
      status="available"
      value={2011-01-01T10:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="16"
      status="available"
      value={2011-01-01T11:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="17"
      status="available"
      value={2011-01-01T11:30:00.000Z}
    />
  </div>
</div>
`;

exports[`TimeIntervalPicker render has \`selectedTime\` and \`busyTime\` 1`] = `
<div
  className="wrapper"
>
  <h3
    className="picker-header"
  >
    React timespan picker
  </h3>
  <div
    className="picker"
  >
    <Timestamp
      handleClick={[Function]}
      key="0"
      status="available"
      value={2012-01-01T03:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="1"
      status="available"
      value={2012-01-01T03:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="2"
      status="available"
      value={2012-01-01T04:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="3"
      status="available"
      value={2012-01-01T04:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="4"
      status="available"
      value={2012-01-01T05:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="5"
      status="available"
      value={2012-01-01T05:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="6"
      status="available"
      value={2012-01-01T06:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="7"
      status="available"
      value={2012-01-01T06:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="8"
      status="available"
      value={2012-01-01T07:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="9"
      status="available"
      value={2012-01-01T07:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="10"
      status="available"
      value={2012-01-01T08:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="11"
      status="available"
      value={2012-01-01T08:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="12"
      status="available"
      value={2012-01-01T09:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="13"
      status="available"
      value={2012-01-01T09:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="14"
      status="available"
      value={2012-01-01T10:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="15"
      status="available"
      value={2012-01-01T10:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="16"
      status="available"
      value={2012-01-01T11:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="17"
      status="available"
      value={2012-01-01T11:30:00.000Z}
    />
  </div>
</div>
`;

exports[`TimeIntervalPicker render has \`selectedTime\` and \`busyTime\` 2`] = `
<div
  className="wrapper"
>
  <h3
    className="picker-header"
  >
    React timespan picker
  </h3>
  <div
    className="picker"
  >
    <Timestamp
      handleClick={[Function]}
      key="0"
      status="available"
      value={2014-01-01T03:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="1"
      status="available"
      value={2014-01-01T03:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="2"
      status="available"
      value={2014-01-01T04:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="3"
      status="available"
      value={2014-01-01T04:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="4"
      status="available"
      value={2014-01-01T05:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="5"
      status="available"
      value={2014-01-01T05:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="6"
      status="available"
      value={2014-01-01T06:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="7"
      status="available"
      value={2014-01-01T06:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="8"
      status="available"
      value={2014-01-01T07:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="9"
      status="available"
      value={2014-01-01T07:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="10"
      status="available"
      value={2014-01-01T08:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="11"
      status="available"
      value={2014-01-01T08:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="12"
      status="available"
      value={2014-01-01T09:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="13"
      status="available"
      value={2014-01-01T09:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="14"
      status="available"
      value={2014-01-01T10:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="15"
      status="available"
      value={2014-01-01T10:30:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="16"
      status="available"
      value={2014-01-01T11:00:00.000Z}
    />
    <Timestamp
      handleClick={[Function]}
      key="17"
      status="available"
      value={2014-01-01T11:30:00.000Z}
    />
  </div>
</div>
`;
